{{$NEXT}}

0.005     2019-08-22 01:00:40 EDT
  - Handle multiple lines in buffer on close in the case where the line separator was changed (#3, kiwiroy)

0.004     2019-08-07 11:54:05 EDT
  - Optimization to buffer parsing (#2, kiwiroy)

0.003     2018-03-30 13:40:42 EDT
  - Use IO::Pipely for portable tests

0.002     2018-03-26 01:27:34 EDT
  - Add dependency on Role::Tiny

0.001     2018-03-25 00:59:33 EDT
  - First release