@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Avoid an uninitialized value warning in close handler
 
 0.005     2019-08-22 01:00:40 EDT
   - Handle multiple lines in buffer on close in the case where the line separator was changed (#3, kiwiroy)
